---
source: tests/integration_test.rs
expression: record
info: "type=SYSTEM_RUNLEVEL msg=audit(1481076992.492:390): pid=1279 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='old-level=N new-level=3 comm=\"systemd-update-utmp\" exe=\"/usr/lib/systemd/systemd-update-utmp\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SYSTEM_RUNLEVEL",
  "timestamp": 1481076992492,
  "id": 390,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "?",
      "comm": "systemd-update-utmp",
      "exe": "/usr/lib/systemd/systemd-update-utmp",
      "hostname": "?",
      "new-level": "3",
      "old-level": "N",
      "res": "success",
      "terminal": "?"
    },
    "pid": "1279",
    "ses": "4294967295",
    "subj": "system_u:system_r:init_t:s0",
    "uid": "root"
  }
}
